apps/transmission/overlays/kaltashar/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-tracker
  namespace: shikanime
  annotations:
    tailscale.com/hostname: kaltashar-transmission-tracker
    tailscale.com/tags: tag:transmission
