apps/transmission/overlays/kaltashar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
    tailscale.com/hostname: kaltashar-transmission
spec:
  defaultBackend:
    service:
      name: transmission
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - transmission
